some shooter tuning and 5 note is almost in timeframe

--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,8 +2,12 @@
   "robotWidth": 0.635,
   "robotLength": 0.635,
   "holonomicMode": true,
-  "pathFolders": [],
-  "autoFolders": [],
+  "pathFolders": [
+    "SDR"
+  ],
+  "autoFolders": [
+    "Sdr"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 6.0,
   "defaultMaxAngVel": 540.0,
